GP-Copilot/01-package/fixer-scripts/example-pod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-pod-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: example-pod
      app.kubernetes.io/name: example-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports: &id001
    - protocol: TCP
      port: 8080
  egress:
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - ports: *id001
